# dynamic-system

./: .env.example  .gitignore  API_KEY_SECURITY.md  CLAUDE_CODE_IMPLEMENTATION_SUMMARY.md  Containerfile  Containerfile.dev  Containerfile.simple  LICENSE  Makefile  README.md  SECURITY_IMPROVEMENTS.md  config.yaml  demo_claude_code.py  podman-compose.dev.yml  podman-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  test_analyze_request.py
config/: mcp_services.yaml  models.yaml  monitoring.yaml
docs/: CLAUDE_CODE_INTEGRATION.md
examples/: example_scenarios.py  example_usage.py
scripts/: dev.sh  setup.sh  test_direct_orchestration.py
src/: __init__.py  server.py  server_simple.py
src/document_processor/: __init__.py  chunking_strategy.py  document_preprocessor.py  summary_cache.py
src/mcp_manager/: __init__.py  connectors.py  service_registry.py  service_selector.py
src/model_manager/: __init__.py  config.py  fallback_handler.py  model_selector.py
src/models/: __init__.py  requests.py
src/monitoring/: __init__.py  metrics_collector.py
src/orchestrator/: __init__.py  complexity_analyzer.py  coordinator.py  intent_classifier.py
src/prompt_generator/: __init__.py  cache.py  generator.py
src/utils/: __init__.py  claude_code_client.py  config_loader.py  env_loader.py  llm_client.py  logger.py
tests/: __init__.py  conftest.py  test_claude_code_integration.py  test_complexity_analyzer.py  test_input_validation.py  test_intent_classifier.py  test_orchestrator.py
